# aurora-dsql-loader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  aurora-dsql-loader.py
.github/workflows/: ci.yml  dsql-cluster-create.yml  dsql-cluster-delete.yml  gitleaks.yml  release.yml
docs/: release-checklist-pgdump.md
src/: config.rs  integ_tests.rs  lib.rs  main.rs  runner.rs  telemetry.rs  verify.rs
src/coordination/: coordinator.rs  manifest.rs  mod.rs  progress.rs  worker.rs
src/db/: mod.rs  pool.rs  schema.rs
src/export/: catalog.rs  data.rs  ddl.rs  document.rs  mod.rs  orchestrator.rs
src/formats/: mod.rs  reader.rs
src/formats/delimited/: mod.rs  reader.rs
src/formats/parquet/: adapter.rs  conversion.rs  mod.rs  reader.rs  schema.rs
src/formats/pgdump/: escape.rs  mod.rs  reader.rs  scan.rs  tests.rs
src/io/: byte_reader.rs  local_reader.rs  mod.rs  s3_reader.rs  uri.rs
src/migrate/: apply.rs  mod.rs  orchestrator.rs  transform.rs
src/verify/: value_check.rs
tests/: pgdump_e2e_dsql.rs
tests/fixtures/: pgdump_dsql_native.sql  pgdump_full.sql  pgdump_simple.sql
