[package]
name = "aurora-dsql-loader"
version = "1.0.0"
edition = "2024"
description = "A data loader for Aurora DSQL with support for CSV, TSV, and Parquet files"
homepage = "https://github.com/aws-samples/aurora-dsql-loader"
repository = "https://github.com/aws-samples/aurora-dsql-loader"
license = "MIT-0"
keywords = ["aurora", "dsql", "database", "loader", "aws"]
categories = ["command-line-utilities", "database"]
readme = "README.md"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
arrow = "57"
async-stream = "0.3.6"
async-trait = "0.1"
aws-config = "1.5"
aws-credential-types = "1.2"
aws-sdk-dsql = "1.40"
aws-sdk-s3 = "1.40"
aws-types = "1.3"
bb8 = "0.9.1"
bytes = "1.5"
chrono = "0.4"
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.3"
derive_builder = "0.20.2"
either = "1.15.0"
futures = "0.3.31"
hex = "0.4"
indicatif = "0.17"
parquet = { version = "57", features = ["async"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["postgres", "sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }
tempfile = "3.8"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
rand = "0.8"
